# ChessFenGen

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
assets/piece_sets/: ATTRIBUTION.md  README.md
checkpoints/: stage1_best.pt  stage2_best.pt  stage2_step65000.pt
chessfengen/: __init__.py  coretypes.py  demo.py  pieces.py
chessfengen/augment/: __init__.py  domains.py  noise.py
chessfengen/data/: __init__.py  dataset.py
chessfengen/eval/: __init__.py  evaluate.py  metrics.py
chessfengen/fen/: __init__.py  generator.py  placement.py
chessfengen/inference/: __init__.py  geometry.py  pipeline.py
chessfengen/models/: __init__.py  stage1_detector.py  stage2_classifier.py
chessfengen/render/: __init__.py  board.py  piece_sets.py
chessfengen/train/: __init__.py  phase.py  stage1.py  stage2.py
tests/: test_augment.py  test_generator.py  test_geometry.py  test_metrics.py  test_model_contract.py  test_pipeline.py  test_placement.py  test_stream.py  test_trained_model.py
