[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chessfengen"
version = "0.1.0"
description = "Synthetic data pipeline and models for chess board image to FEN recognition"
requires-python = ">=3.10"
dependencies = [
    "python-chess>=1.11",
    "cairosvg>=2.7",
    "Pillow>=10.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["chessfengen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
